--- a/tree_partitioning/README.org
+++ b/tree_partitioning/README.org
@@ -1,4 +1,5 @@
-#+TITLE:Usage
+* Instructions
+Run the following command from the root directory:
 #+begin_src python
 python -m tree_partitioning <args>
 #+end_src
