--- a/README.org
+++ b/README.org
@@ -1,7 +1,7 @@
 #+TITLE: Tree partitioning
 The library contains implementations of /tree partitioning/ algorithms for power system networks, turning the network into clusters that are connected in a tree-like manner.
 
-#+html: <p align="center"><img width=600 height=450 src="img/case118_ieee_LaplacianN_4_congestion.jpg"/></p>
+#+html: <p align="center"><img width=600 height=450 src="example-ieee118.jpg"/></p>
 
 This repository contains a Python implementation of various tree partitioning algorithms presented in the following papers:
 - L. Lan and A. Zocca, "Failure localization in power networks using tree partitioning," Work in progress.
