--- a/README.org
+++ b/README.org
@@ -1,7 +1,7 @@
 #+TITLE: Tree partitioning
 The library contains implementations of /tree partitioning/ algorithms for power system networks, turning the network into clusters that are connected in a tree-like manner.
 
-#+html: <p align="center"><img width=600 height=450 src="example-ieee118.jpg"/></p>
+#+html: <p align="center"><img width=600 height=450 src="ieee118.jpg"/></p>
 
 This repository contains a Python implementation of various tree partitioning algorithms presented in the following papers:
 - L. Lan and A. Zocca, "Localizing line failures in power networks: a tree partitioning approach," Work in progress.
