--- a/README.org
+++ b/README.org
@@ -22,3 +22,7 @@ module load 2020
 module load Gurobi/9.1.1-foss-2020a-Python-3.8.2
 module load Python/3.8.2-GCCcore-9.3.0
 #+end_src
+
+#+begin_src
+poetry run python experiments/power_flow_disruption.py --n_clusters 3 --min_size 100 --max_size 300
+#+end_src
